cmake_minimum_required(VERSION 3.17)
project(DailyCodingProblem)

set(CMAKE_CXX_STANDARD 14)

add_executable(DailyCodingProblem main.cpp findDeepestBTLeft.cpp longestPathWeightTree.cpp)
add_executable(sortedSquares sortedSquares.cpp)
add_executable(minAndMax minAndMax.cpp)
add_executable(isSubtree isSubtree.cpp)
add_executable(TowerOfHanoi TowerOfHanoi.cpp)
add_executable(nextPermutaton nextPermutaton.cpp)
add_executable(reachNumber reachNumber.cpp)
add_executable(findDeepestBT findDeepestBT.cpp)
add_executable(findDeepestBTLeft findDeepestBTLeft.cpp)
add_executable(longestPathWeightTree longestPathWeightTree.cpp)
