cmake_minimum_required(VERSION 3.17)
project(DailyCodingProblem)

set(CMAKE_CXX_STANDARD 14)

add_executable(DailyCodingProblem main.cpp findDeepestBTLeft.cpp longestPathWeightTree.cpp impossibleSum.cpp firstRecurringChar.cpp)
add_executable(sortedSquares sortedSquares.cpp)
add_executable(minAndMax minAndMax.cpp)
add_executable(isSubtree isSubtree.cpp)
add_executable(TowerOfHanoi TowerOfHanoi.cpp)
add_executable(nextPermutaton nextPermutaton.cpp)
add_executable(reachNumber reachNumber.cpp)
add_executable(findDeepestBT findDeepestBT.cpp)
add_executable(findDeepestBTLeft findDeepestBTLeft.cpp)
add_executable(longestPathWeightTree longestPathWeightTree.cpp)
add_executable(maxTripleProduct maxTripleProduct.cpp)
add_executable(largestRectangleHist largestRectangleHist.cpp)
add_executable(stepWordAnna stepWordAnna.cpp)
add_executable(impossibleSum impossibleSum.cpp)
add_executable(firstRecurringChar firstRecurringChar.cpp)
add_executable(gcd gcd.cpp)
